fix image on mobile

--- a/frontend/web/less/mobile/meet.less
+++ b/frontend/web/less/mobile/meet.less
@@ -56,84 +56,16 @@
         margin: 40px auto 80px;
         z-index: 5;
         .user_item{
+            position: relative;
             .avatar-image{
-                width: 90%;
-                height: auto;
+                width: 275px;
+                height: 275px;
                 margin: auto;
-                position: relative;
                 img{
                     width: 100%;
                     height: auto;
                     display: block;
                     margin: auto;
-                }
-                .control-btn{
-                    width: 100%;
-                    margin: 15px auto;
-                    color: #fff;
-                    position: absolute;
-                    top: 90%;
-                    left: 0%;
-                    .met{
-                        display: none;
-                    }
-                    .back,.next,.meet,.met{
-                        cursor: pointer;
-                        box-shadow: 4px 4px 5px #888;
-                        &.disable{
-                            opacity: 0.8;
-                        }
-                    }
-                    .back{
-                        float: left;
-                    }
-                    .next{
-                        float: right;
-                    }
-                    .back,.next{
-                        width: 30%;
-                        border: 1px solid #D07B41;
-                        background: #f1904d;
-                        padding: 5px;
-                        border-radius: 10px;
-                        text-align: center;
-                        .fa{
-                            font-size: 18px;
-                        }
-                        
-                        
-                    }
-                    .meet,.met{
-                        width: 35%;
-                        margin: auto;
-                        border: 1px solid #48A24A;
-                        background: #49b14c;
-                        padding: 5px 14px;
-                        border-radius: 10px;
-
-                        .fa{
-                            font-size: 20px;
-                        }
-                        img{
-                            width: 17px;
-                            height: 17px;
-                            margin-right: 5px;
-                            display: initial;
-                        }
-                        span{
-                            font-size: 18px;
-                            padding: 0;
-                            font-weight: bold;  
-                            display: block;
-                            text-align: center;    
-                        }
-                    }
-                    span{
-                        font-size: 18px;
-                        padding: 0 5px;
-                        font-weight: bold;      
-                    }
-                    
                 }
             }
             .box-infomation{
@@ -193,6 +125,74 @@
 
             
         }
+        .control-btn{
+            width: 90%;
+            margin: 15px auto;
+            color: #fff;
+            position: absolute; 
+            left: 5%;
+            top: 275px;
+            // display: none;
+            .met{
+                display: none;
+            }
+            .back,.next,.meet,.met{
+                cursor: pointer;
+                box-shadow: 4px 4px 5px #888;
+                &.disable{
+                    opacity: 0.8;
+                }
+            }
+            .back{
+                float: left;
+            }
+            .next{
+                float: right;
+            }
+            .back,.next{
+                width: 30%;
+                border: 1px solid #D07B41;
+                background: #f1904d;
+                padding: 5px;
+                border-radius: 10px;
+                text-align: center;
+                .fa{
+                    font-size: 18px;
+                }
+                
+                
+            }
+            .meet,.met{
+                width: 35%;
+                margin: auto;
+                border: 1px solid #48A24A;
+                background: #49b14c;
+                padding: 5px 14px;
+                border-radius: 10px;
 
+                .fa{
+                    font-size: 20px;
+                }
+                img{
+                    width: 17px;
+                    height: 17px;
+                    margin-right: 5px;
+                    display: initial;
+                }
+                span{
+                    font-size: 18px;
+                    padding: 0;
+                    font-weight: bold;  
+                    display: block;
+                    text-align: center;    
+                }
+            }
+            span{
+                font-size: 18px;
+                padding: 0 5px;
+                font-weight: bold;      
+            }
+            
+        }
     }
 }   
